some code stubs and a proof of concept for real numerical optimal solving. commiting for backup reasons not for code beauty

--- a/code/simulation/SplittingStrategies.ipynb
+++ b/code/simulation/SplittingStrategies.ipynb
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -854,55 +854,117 @@
      "output_type": "stream",
      "text": [
       "PAYMENT PAIR NUMBER: 0\n",
-      "removing (0257bb91a7,0227230b7b)\n",
-      "No Path between: 0257bb91a7 and 0280b55532\n",
-      "(False, 1) \n",
+      "02ffc8457a--21153-->024d238740--3509676-->03a503d8e3--19002-->035601c906\n",
+      "last path worked\n",
+      "(True, 1) \n",
       "\n",
       "PAYMENT PAIR NUMBER: 1\n",
-      "removing (03fac7292c,03a503d8e3)\n",
-      "removing (03fac7292c,03cfea6e01)\n",
-      "removing (03fac7292c,0331f80652)\n",
-      "removing (03fac7292c,03902356d2)\n",
-      "removing (03fac7292c,028691404b)\n",
-      "removing (03fac7292c,0219426a5b)\n",
-      "removing (03fac7292c,0297a77f4d)\n",
-      "removing (03fac7292c,02dfdcca40)\n",
-      "removing (03fac7292c,03f360457d)\n",
-      "03fac7292c--493137-->03df3f0a2f--84274-->02ad6fb8d6--0-->03b5b43b3b\n",
-      "removing (03df3f0a2f,02ad6fb8d6)\n",
-      "03fac7292c--441381-->03a5886df6--956279-->02ad6fb8d6--0-->03b5b43b3b\n",
-      "removing (02ad6fb8d6,03b5b43b3b)\n",
-      "03fac7292c--441381-->03a5886df6--561664-->032434517e--232205-->03b5b43b3b\n",
+      "033a58a714--35772-->032679fec1--1197335-->03bb88ccc4--236914-->0270610fab\n",
       "last path worked\n",
-      "(True, 3) \n",
+      "(True, 1) \n",
       "\n",
       "PAYMENT PAIR NUMBER: 2\n",
-      "removing (02e1f8a072,02cac20d1b)\n",
-      "02e1f8a072--493619-->0215bea618--5949852-->0242a4ae0c--0-->02398b6140--125792-->03bd932f13\n",
-      "removing (0242a4ae0c,02398b6140)\n",
-      "02e1f8a072--493619-->0215bea618--1691045-->024a8228d7--10973761-->02398b6140--125792-->03bd932f13\n",
+      "removing (024a8228d7,02ad6fb8d6)\n",
+      "removing (024a8228d7,0217890e3a)\n",
+      "removing (024a8228d7,02a1d2856b)\n",
+      "removing (024a8228d7,038bdb5538)\n",
+      "removing (024a8228d7,03c2abfa93)\n",
+      "removing (024a8228d7,030995c0c0)\n",
+      "removing (024a8228d7,021b56ff97)\n",
+      "removing (024a8228d7,021607cfce)\n",
+      "removing (024a8228d7,0339055694)\n",
+      "removing (024a8228d7,03176e7cd5)\n",
+      "removing (024a8228d7,0260fab633)\n",
+      "removing (024a8228d7,0255e49ac5)\n",
+      "removing (024a8228d7,0309bd6a02)\n",
+      "removing (024a8228d7,0226516cde)\n",
+      "removing (024a8228d7,02b1278809)\n",
+      "removing (024a8228d7,03b2312fa6)\n",
+      "removing (024a8228d7,03cc5ead9a)\n",
+      "removing (024a8228d7,02b6dabd43)\n",
+      "removing (024a8228d7,02c287d1be)\n",
+      "removing (024a8228d7,02b707dafc)\n",
+      "removing (024a8228d7,02b686ccf6)\n",
+      "removing (024a8228d7,0334ac4077)\n",
+      "removing (024a8228d7,02184b9576)\n",
+      "removing (024a8228d7,02d2f445ee)\n",
+      "removing (024a8228d7,03ae442918)\n",
+      "removing (024a8228d7,03d511f6a1)\n",
+      "024a8228d7--216061-->03e5ea100e--10000000-->02d9bab9ed\n",
+      "last path worked\n",
+      "(True, 1) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 3\n",
+      "removing (02b4182bce,02004c625d)\n",
+      "02b4182bce--21526-->03e691f81f--0-->0217890e3a--324969-->03b7aac01d\n",
+      "removing (03e691f81f,0217890e3a)\n",
+      "02b4182bce--550271-->030c3f19d7--24724336-->02ad6fb8d6--287863-->0217890e3a--324969-->03b7aac01d\n",
       "last path worked\n",
       "(True, 2) \n",
       "\n",
-      "PAYMENT PAIR NUMBER: 3\n"
+      "PAYMENT PAIR NUMBER: 4\n",
+      "021729b3ca--71816-->0227230b7b--3300746-->02a0591e84--5156-->036ef54959\n",
+      "removing (02a0591e84,036ef54959)\n",
+      "No Path between: 021729b3ca and 036ef54959\n",
+      "(False, 2) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 5\n",
+      "removing (0382a8fa46,02315fe361)\n",
+      "No Path between: 0382a8fa46 and 02731b798b\n",
+      "(False, 1) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 6\n",
+      "removing (029a6c374e,0358327cb8)\n",
+      "removing (029a6c374e,021607cfce)\n",
+      "029a6c374e--1158336-->02ad6fb8d6--23645-->03295d2e29--5900-->0399b7fb82\n",
+      "removing (03295d2e29,0399b7fb82)\n",
+      "029a6c374e--1158336-->02ad6fb8d6--5455-->03dab87ff8--37014-->0399b7fb82\n",
+      "removing (02ad6fb8d6,03dab87ff8)\n",
+      "029a6c374e--380870-->0242a4ae0c--1420395-->03dab87ff8--37014-->0399b7fb82\n",
+      "last path worked\n",
+      "(True, 3) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 7\n",
+      "035f70b3f4--200000-->03864ef025--0-->028ed6a716--72806-->02f7a2b766--94951-->02cda05df8\n",
+      "removing (03864ef025,028ed6a716)\n",
+      "035f70b3f4--200000-->03864ef025--0-->0255b08125--34413-->02f7a2b766--94951-->02cda05df8\n",
+      "removing (03864ef025,0255b08125)\n",
+      "035f70b3f4--200000-->03864ef025--2602667-->02f3069a34--97485-->02f7a2b766--94951-->02cda05df8\n",
+      "last path worked\n",
+      "(True, 3) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 8\n",
+      "0367f3381b--15465-->03d37fca06--90880-->02ad6fb8d6--1168356-->03e691f81f--254760-->024d15f241\n",
+      "last path worked\n",
+      "(True, 1) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 9\n",
+      "02d9eec966--18159-->023d70f2f7--406909-->0227230b7b--0-->02fed216e0\n",
+      "removing (0227230b7b,02fed216e0)\n",
+      "No Path between: 02d9eec966 and 02fed216e0\n",
+      "(False, 2) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 10\n",
+      "removing (02b3a8dfea,031ce29116)\n",
+      "02b3a8dfea--29790-->02ad6fb8d6--342447-->039edc9498\n",
+      "last path worked\n",
+      "(True, 1) \n",
+      "\n",
+      "PAYMENT PAIR NUMBER: 11\n"
      ]
     },
     {
-     "ename": "NetworkXError",
-     "evalue": "The node 028edfa52a2b6cdfc5ab6849a393c95e5d42687069e1ab5fc299f8d9cddfa8dda9 is not in the digraph.",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/networkx/classes/digraph.py\u001b[0m in \u001b[0;36msuccessors\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m    804\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 805\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_succ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    806\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: '028edfa52a2b6cdfc5ab6849a393c95e5d42687069e1ab5fc299f8d9cddfa8dda9'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mNetworkXError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-121-3814a38e98f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_optimal_split_ratio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-121-3814a38e98f7>\u001b[0m in \u001b[0;36mfind_optimal_split_ratio\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mpayment_pair\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpayment_pair\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0msuc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_liklihood_pathfinding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunded_network\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msuc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0matt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-114-3919f64e0edc>\u001b[0m in \u001b[0;36mmax_liklihood_pathfinding\u001b[0;34m(src, dest, amt, channel_graph, funded_network)\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0mprob_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_probability_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mamt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     impossible_edges=[(src,neighbor) for neighbor in prob_graph.neighbors(src) \n\u001b[0m\u001b[1;32m     58\u001b[0m                       if funded_network[src][neighbor][\"capacity\"]<amt] \n\u001b[1;32m     59\u001b[0m     certain_edges=[(src,neighbor) for neighbor in prob_graph.neighbors(src) \n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/networkx/classes/digraph.py\u001b[0m in \u001b[0;36msuccessors\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m    805\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_succ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    806\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 807\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNetworkXError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"The node {n} is not in the digraph.\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    808\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    809\u001b[0m     \u001b[0;31m# digraph definitions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNetworkXError\u001b[0m: The node 028edfa52a2b6cdfc5ab6849a393c95e5d42687069e1ab5fc299f8d9cddfa8dda9 is not in the digraph."
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-122-bae8efcbb30c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_optimal_split_ratio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-122-bae8efcbb30c>\u001b[0m in \u001b[0;36mfind_optimal_split_ratio\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mpayment_pair\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpayment_pair\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0msuc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_liklihood_pathfinding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunded_network\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msuc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0matt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-114-3919f64e0edc>\u001b[0m in \u001b[0;36mmax_liklihood_pathfinding\u001b[0;34m(src, dest, amt, channel_graph, funded_network)\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmax_liklihood_pathfinding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mamt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunded_network\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m     \u001b[0mprob_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_probability_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mamt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m     impossible_edges=[(src,neighbor) for neighbor in prob_graph.neighbors(src) \n",
+      "\u001b[0;32m<ipython-input-114-3919f64e0edc>\u001b[0m in \u001b[0;36mcreate_probability_graph\u001b[0;34m(amt, channel_graph)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprob_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDiGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdest\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mcap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchannel_graph\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdest\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"cap\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcap\u001b[0m \u001b[0;34m<=\u001b[0m\u001b[0mamt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -913,7 +975,7 @@
     "        print(\"PAYMENT PAIR NUMBER: {}\".format(i))\n",
     "        payment_pair = random.sample(nodes,2)\n",
     "        src, dest = payment_pair\n",
-    "        suc, att = max_liklihood_pathfinding(src, dest, 100000, channel_graph, funded_network)\n",
+    "        suc, att = max_liklihood_pathfinding(src, dest, 10000, channel_graph, funded_network)\n",
     "        res.append((suc,att))\n",
     "        print(res[-1],\"\\n\")\n",
     "    return res\n",
