added a new notebook that finds quickly the solution from where to create a 2nd split. the code is incorrect in the sense that it treats the top paths as disjoint even though if they may not be. also it assumes a probability for the first edge even though in a real situation this would be 1

--- a/code/simulation/SplittingStrategies.ipynb
+++ b/code/simulation/SplittingStrategies.ipynb
@@ -9439,6 +9439,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [],
@@ -10204,6 +10211,7 @@
     "        tmp_channel_graph = get_updated_channel_graph(channel_graph,mpp_split)\n",
     "        prob_graph = create_probability_graph(curr_amt,tmp_channel_graph)\n",
     "        path = nx.shortest_path(prob_graph,s,d,weight=\"weight\")\n",
+    "        paths = nx.shortest_simple_paths(prob_graph,s,d,weight=\"weight\")\n",
     "        key = path_part_of_mpp(path,mpp_split)\n",
     "        if key is not None:\n",
     "            print(\"yes!\")\n",
@@ -10705,6 +10713,71 @@
     "https://arxiv.org/pdf/1701.05395.pdf\n",
     "\n",
     "this seems highly relevant: (or actually like the solution of our problem https://www.jstor.org/stable/3690154?seq=1 but of course I would have to read it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uni_probability(capacities,x):\n",
+    "    eq = 1\n",
+    "    for cap in capacities:\n",
+    "        eq=eq*((cap+1-x)/(cap+1))\n",
+    "    return eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PAYMENT PAIR NUMBER: 0\n",
+      "03efccf2c3--10000000-->03cde60a63--500000000-->0288be11d1--16777215-->0231eccc65\n",
+      "03efccf2c3--10000000-->03cde60a63--200000000-->03864ef025--16777215-->0231eccc65\n",
+      "(-x/16777216 + 1)*(-x/500000001 + 1) 1 (-x/16777215 + 1)*(-x/500000000 + 1)\n",
+      "1000000 1.48902827813297e-8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analytic_kpp(s,d,amt):\n",
+    "    mpp_split = {}\n",
+    "    tmp_channel_graph = get_updated_channel_graph(channel_graph,mpp_split)\n",
+    "    prob_graph = create_probability_graph(1,tmp_channel_graph)\n",
+    "    paths = nx.shortest_simple_paths(prob_graph,s,d,weight=\"weight\")\n",
+    "    \n",
+    "    factor = 1\n",
+    "    x = symbols(\"x\")\n",
+    "    for i,path in enumerate(paths):\n",
+    "        caps = [tmp_channel_graph[src][dest][\"cap\"] for src,dest in next_hop(path[1:])]                \n",
+    "        print_path(path,channel_graph)\n",
+    "        if i == 0:\n",
+    "            eq = uni_probability(caps,x)\n",
+    "            red_caps = [cap-1 for cap in caps]\n",
+    "            eq1 = uni_probability(red_caps,x)\n",
+    "        if i ==1:\n",
+    "            faktor = path_probability(path[1:],prob_graph)\n",
+    "            #print((P).evalf(subs=dict(zip(variables[:-1],start))))\n",
+    "            print(eq,factor,eq1)\n",
+    "            res = nsolve(Eq(eq*factor,eq1),x,amt, simplify=False)\n",
+    "            print(amt, res)\n",
+    "            return\n",
+    "        \n",
+    "for i in range(10):\n",
+    "    print(\"PAYMENT PAIR NUMBER: {}\".format(i))\n",
+    "    #n = [x for x in channel_graph.nodes() if len(list(channel_graph.neighbors(x)))>10]\n",
+    "    #print(len(n), \"nodes to sample from\")\n",
+    "    #payment_pair = random.sample(n,2)\n",
+    "    src, dest = payment_pair\n",
+    "    analytic_kpp(\"03efccf2c383d7bf340da9a3f02e2c23104a0e4fe8ac1a880c8e2dc92fbdacd9df\",dest,1000000)\n",
+    "    break\n",
+    "#03efccf2c3--485003-->02e7c42ae2--400003-->0231eccc65\n"
    ]
   },
   {
